2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#119446 - Media player shortcut applet is movable in all
	homes

	* src/home/hd-home.c (hd_home_add_applet): Do not add applets to
	inactive views.

2009-06-02  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#116276 - In the left corner of the title area, there should
	be alayout mode icon.

	* src/home/hd-title-bar.c (BTN_FILENAMES, BTN_LABELS,
	  hd_title_bar_set_for_edit_mode): Use edit icon in layout mode
	  titlebar.

2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	HD_COMP_MGR_SCREEN_WIDTH/HEIGHT, SCREEN_WIDTH/HEIGHT,
	HD_COMP_MGR_CLIENT_IS_MAXIMIZED are now replaced with honest inlined
	functions.

	* src/launcher/hd-launcher-page.c (hd_launcher_page_finalize): Set
	actors NULL after destroying.
	* src/launcher/hd-launcher.c (hd_launcher_transition_app_start): Set
	actors NULL after destroying.
	* src/home/hd-title-bar.c (hd_title_bar_dispose): Set NULL after
	destroying.
	* src/mb/hd-comp-mgr.c (hd_comp_mgr_client_is_maximized): New function
	to replace HD_COMP_MGR_CLIENT_IS_MAXIMIZED.
	(the_hd_comp_mgr): New static variable for HdCompMgr singleton. Safely
	used from hd_comp_mgr_get_current_screen_width/height because the
	parent is ready before we init HdCompMgr.

2009-06-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#119082 - Information notes missing the blur/dim effect

	* src/home/hd-render-manager.c: Added HD_IS_INFO_NOTE to check
	  for whether to blur background or not.

2009-06-01  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-render-manager.c (hd_render_manager_set_state): Call
	mb_wm_comp_mgr_clutter_client_track_damage to toggle damage event
	handling on/off when dealing with the non-composited mode.

2009-06-01  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#119381 - Status area to be dimmed when UI dialog shown

	* src/home/hd-title-bar.c: Don't leave space for the status area